--- a/index.html
+++ b/index.html
@@ -97,9 +97,36 @@
             margin-right: 10px;
             color: #3498db;
         }
+        .language-switch {
+            position: absolute;
+            top: 10px;
+            right: 10px;
+            display: flex;
+            align-items: center;
+            background-color: rgba(255, 255, 255, 0.8);
+            padding: 5px 10px;
+            border-radius: 20px;
+            box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+        }
+        .language-switch img {
+            transition: transform 0.3s ease;
+        }
+        .language-switch img:hover {
+            transform: scale(1.1);
+        }
     </style>
 </head>
 <body>
+    <div class="language-switch">
+        <span style="font-size: 1.2em; font-weight: bold; margin-right: 10px;">Language</span>
+        <a href="index.html" style="text-decoration: none; margin: 0 5px;">
+            <img src="https://flagcdn.com/w40/gb.png" width="30" alt="English">
+        </a>
+        <a href="index_fa.html" style="text-decoration: none; margin: 0 5px;">
+            <img src="https://flagcdn.com/w40/ir.png" width="30" alt="Persian">
+        </a>
+    </div>
+    
     <div class="container">
         <h1 class="animate__animated animate__fadeInDown">Q+ Interpreter 🧮</h1>
         <p class="animate__animated animate__fadeIn">Welcome to Q+ Interpreter, a powerful Python-based calculator that uses postfix notation (Reverse Polish Notation) to perform various mathematical operations. 🚀</p>
@@ -163,3 +190,4 @@ Result: 1.0</code></pre>
         new WOW().init();
     </script>
 </body>
+</html>
